--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
+#Propiedades del servidor
 server.port=8080
+server.error.include-message=always
+
+loggin.level.root=DEBUG
+
+# Propiedades para MariaDB
 spring.datasource.url=jdbc:mariadb://bd.iesguara.cf:3306/DAMDUALAlu8_basedatos
 spring.datasource.username=DAMDUALAlu8
 spring.datasource.password=alu8*idm2
 
+# Hibernate-JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
